# blockcounter

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: 00.rs  01.rs  02.rs  03.rs  comment0.rs  deletable.rs
src/: lib.rs
