[package]
name = "blockcounter"
version = "0.2.4"
authors = ["Cassio Kirch <cassiokirch@gmail.com>"]
description = "Counts the blocks in a stream."
keywords = ["gnuplot", "text", "string", "file"]
categories = ["text-processing"]
license = "GPL-3.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/kirch7/blockcounter"
documentation = "https://docs.rs/blockcounter"

[dependencies]

[badges]
travis-ci = { repository = "kirch7/blockcounter" }
appveyor = { repository = "kirch7/blockcounter" }

[profile.dev]
opt-level        = 0
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.doc]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1


[[example]]
name = "00"

[[example]]
name = "01"

[[example]]
name = "02"

[[example]]
name = "03"

